Add Service Bound Apps